# Bachelorthesis

./: .gitignore  data.dvc  pyproject.toml
.ipynb_checkpoints/: 02_fix_skewed_features_and_outliners-checkpoint.ipynb
notebooks/: 01_cleaning.ipynb  02_feature_selection_model_indp.ipynb  03_feature_selection_model_indp.ipynb
src/: create_csv.py  data_cleaning.py  value_count.py
