[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Amrasil",email = "amrasil@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.4.4,<8.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
